oss/ingress-nginx/test/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test-nginx
  namespace: shared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-test
  template:
    metadata:
      labels:
        app: my-test
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-test-service
  namespace: shared
spec:
  selector:
    app: my-test
  ports:
    - port: 80
      targetPort: 80
