oss/ingress-nginx/test/test_nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: shared
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.onebailey.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-test-service
            port:
              number: 80
